@@ -181,6 +181,10 @@ CMF 2.0.0-alpha (2006/01/22)
 
   Others
 
+    - Replaced deprecated 'manage_afterAdd' and 'manage_beforeDelete' hooks
+      in CookieCrumbler with a Z3-style event subscriber which does the
+      registration with the container's __before_traverse__.
+
     - Moved GenericSetup out of the CMF package, it is now a standalone
       product, but still distributed as part of the CMF package.
 
